appId: ${APP_ID}
---
- runFlow:
      file: subflows/import/import-database-from-settings.flow.yaml
      env:
          FIXTURE_ROW_ID_MATCH: '02.db'

- runFlow:
      file: subflows/accounts/create-crypto-account.flow.yaml
      env:
          ACCOUNT_NAME: 'E2E Monero Ledger'
          ACCOUNT_AMOUNT: '22.123456'
          CURRENCY_CODE: 'XMR'

- extendedWaitUntil:
      visible:
          id: 'CryptoGroup.Market.XMR'
      timeout: 10000
- assertVisible:
      id: 'CryptoGroup.Card.XMR'
- assertVisible:
      id: 'CryptoGroup.Container.XMR'
- assertVisible:
      id: 'CryptoGroup.Balance.XMR'
- assertVisible:
      id: 'CryptoGroup.Value.XMR'
- assertVisible:
      id: 'CryptoGroup.Rate.XMR'
- waitForAnimationToEnd

- tapOn:
      id: 'CryptoGroup.AccountCount.XMR'
- waitForAnimationToEnd
- extendedWaitUntil:
      visible:
          id: 'AccountCard.E2E Monero Ledger'
      timeout: 10000
- assertVisible:
      id: 'AccountCard.Balance.E2E_Monero_Ledger.22_123456_XMR'

- tapOn:
      id: 'CryptoGroup.Market.XMR'
- extendedWaitUntil:
      visible:
          id: 'CurrencyMarket.Holdings.XMR'
      timeout: 10000
- assertVisible:
      id: 'CurrencyMarket.Holdings.XMR'
- assertVisible: '22.123456 XMR'
